# mate-movie-player

./: COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  idol.spec.in  license_change  xmldocs.make
bindings/python/: Makefile.am  Makefile.in  idol.defs  idol.override  override_common.c  override_common.h
browser-plugin/: Makefile.am  Makefile.in  README.browser-plugin  idol-glow-button.c  idol-glow-button.h  idol-plugin-viewer-constants.h  idol-plugin-viewer-options.h  idol-plugin-viewer.c  idolCone.cpp  idolCone.h  idolConeAudio.cpp  idolConeAudio.h  idolConeInput.cpp  idolConeInput.h  idolConePlaylist.cpp  idolConePlaylist.h  idolConePlaylistItems.cpp  idolConePlaylistItems.h  idolConeVideo.cpp  idolConeVideo.h  idolGMPControls.cpp  idolGMPControls.h  idolGMPError.cpp  idolGMPError.h  idolGMPNetwork.cpp  idolGMPNetwork.h  idolGMPPlayer.cpp  idolGMPPlayer.h  idolGMPPlaylist.cpp  idolGMPPlaylist.h  idolGMPSettings.cpp  idolGMPSettings.h  idolMullYPlugin.cpp  idolMullYPlugin.h  idolNPClass.cpp  idolNPClass.h  idolNPObject.cpp  idolNPObject.h  idolNPObjectWrapper.h  idolNPVariantWrapper.h  (+7 more)
data/: Makefile.am  Makefile.in  fullscreen.ui  handlers.sh  idol-bugreport.py  idol-video-thumbnailer.1  idol-video-thumbnailer.pod  idol.1  idol.desktop.in.in.in  idol.schemas.in  idol.ui  mime-type-include.sh  mime-type-list.txt  mozilla-viewer.ui  playlist.ui  schemas.sh  video-list.ui
data/icons/: Makefile.in
data/icons/16x16/: Makefile.am  Makefile.in
data/icons/22x22/: Makefile.am  Makefile.in
data/icons/24x24/: Makefile.am  Makefile.in
data/icons/32x32/: Makefile.am  Makefile.in
data/icons/48x48/: Makefile.am  Makefile.in
data/icons/scalable/: Makefile.am  Makefile.in
help/: ChangeLog  Makefile.am  Makefile.in
help/C/: idol.xml
help/bg/: bg.po
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/en_GB/: en_GB.po
help/es/: es.po
help/eu/: eu.po
help/fi/: fi.po
help/fr/: fr.po
help/it/: it.po
help/ja/: ja.po
help/oc/: oc.po
help/pa/: pa.po
help/pl/: pl.po
help/pt_BR/: pt_BR.po
help/ru/: ru.po
help/sv/: sv.po
help/uk/: uk.po
help/zh_CN/: zh_CN.po
help/zh_HK/: zh_HK.po
help/zh_TW/: zh_TW.po
lib/: Makefile.am  Makefile.in  idol-scrsaver.c  idol-scrsaver.h
src/: Makefile.am  Makefile.in  ev-sidebar.c  ev-sidebar.h  idol-audio-preview.c  idol-cell-renderer-video.c  idol-cell-renderer-video.h  idol-dnd-menu.c  idol-dnd-menu.h  idol-fullscreen.c  idol-fullscreen.h  idol-interface.c  idol-interface.h  idol-menu.c  idol-menu.h  idol-object.c  idol-open-location.c  idol-open-location.h  idol-options.c  idol-options.h  idol-playlist.c  idol-playlist.h  idol-preferences.c  idol-preferences.h  idol-private.h  idol-profile.h  idol-properties-main.c  idol-properties-view.c  idol-properties-view.h  idol-resources.c  idol-resources.h  idol-session.c  idol-session.h  idol-sidebar.c  idol-sidebar.h  idol-statusbar.c  idol-statusbar.h  idol-subtitle-encoding.c  idol-subtitle-encoding.h  idol-time-label.c  (+10 more)
src/backend/: Makefile.am  Makefile.in  bacon-video-widget-gst-0.10.c  bacon-video-widget-gst-missing-plugins.c  bacon-video-widget.h  bvw-test.c  gstscreenshot.c  video-utils.c  video-utils.h
src/plugins/: Makefile.am  Makefile.in  idol-module.c  idol-module.h  idol-plugin-manager.c  idol-plugin-manager.h  idol-plugin.c  idol-plugin.h  idol-plugins-engine.c  idol-plugins-engine.h  idol-python-module.c  idol-python-module.h  idol-python-plugin.c  idol-python-plugin.h
src/plugins/bemused/: Makefile.am  Makefile.in  bemused.idol-plugin.in  idol-bemused.c
src/plugins/brasero-disc-recorder/: Makefile.am  Makefile.in  brasero-disc-recorder.idol-plugin.in  idol-disc-recorder.c
src/plugins/chapters/: Makefile.am  Makefile.in  chapters-list.ui  chapters.idol-plugin.in  idol-chapters-utils.c  idol-chapters-utils.h  idol-chapters.c  idol-cmml-parser.c  idol-cmml-parser.h  idol-edit-chapter.c  idol-edit-chapter.h
src/plugins/coherence_upnp/: Makefile.am  Makefile.in  coherence_upnp.idol-plugin.in  coherence_upnp.py
src/plugins/dbus-service/: Makefile.am  Makefile.in  dbus-service.idol-plugin.in  dbus-service.py
src/plugins/galago/: Makefile.am  Makefile.in  galago.idol-plugin.in  idol-galago.c
src/plugins/gromit/: Makefile.am  Makefile.in  gromit.idol-plugin.in  idol-gromit.c
src/plugins/idol/: Makefile.am  Makefile.in  __init__.py
src/plugins/iplayer/: Makefile.am  Makefile.in  iplayer.idol-plugin.in  iplayer.py  iplayer2.py
src/plugins/jamendo/: Makefile.am  Makefile.in  jamendo.idol-plugin.in  jamendo.py
src/plugins/lirc/: Makefile.am  Makefile.in  idol-lirc.c  idol_lirc_default  lirc.idol-plugin.in
src/plugins/media-player-keys/: Makefile.am  Makefile.in  idol-media-player-keys.c  media-player-keys.idol-plugin.in
src/plugins/mythtv/: Makefile.am  Makefile.in  idol-mythtv.c  mythtv.idol-plugin.in
src/plugins/ontop/: Makefile.am  Makefile.in  idol-ontop.c  ontop.idol-plugin.in
src/plugins/opensubtitles/: Makefile.am  Makefile.in  opensubtitles.idol-plugin.in  opensubtitles.py
src/plugins/properties/: Makefile.am  Makefile.in  bacon-video-widget-properties.c  idol-movie-properties.c  movie-properties.idol-plugin.in
src/plugins/publish/: Makefile.am  Makefile.in  idol-publish.c  publish-plugin.ui  publish.idol-plugin.in
src/plugins/pythonconsole/: Makefile.am  Makefile.in  console.py  pythonconsole.idol-plugin.in  pythonconsole.py
src/plugins/sample-python/: Makefile.am  Makefile.in  sample-python.idol-plugin.in  sample-python.py
src/plugins/sample-vala/: Makefile.am  Makefile.in  idol-sample-vala-plugin.c  idol-sample-vala-plugin.vala  sample-vala.idol-plugin.in
src/plugins/screensaver/: Makefile.am  Makefile.in  idol-screensaver.c  screensaver.idol-plugin.in
src/plugins/screenshot/: Makefile.am  Makefile.in  idol-gallery-progress.c  idol-gallery-progress.h  idol-gallery.c  idol-gallery.h  idol-screenshot-plugin.c  idol-screenshot-plugin.h  idol-screenshot.c  idol-screenshot.h  mate-screenshot-widget.c  (+2 more)
(+181 files in other folders)
