include $(top_srcdir)/mate-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = idol
DOC_ENTITIES = legal.xml
DOC_H_FILE = idol-docs.h
DOC_H_DOCS = C/idol.xml
DOC_INCLUDES = 

DOC_FIGURES  = 	figures/idol_show_playlist_button.png 	\
		figures/idol_next_button.png		\
		figures/idol_start_window.png		\
		figures/idol_pause_button.png		\
		figures/idol_volume_maximum_button.png	\
		figures/idol_play_button.png		\
		figures/idol_volume_mute_button.png	\
		figures/idol_previous_button.png

DOC_LINGUAS = bg ca cs da de el en_GB es eu fi fr it ja oc pa pl pt_BR ru sv uk zh_CN zh_HK zh_TW
